Fix get-started jump to anchor link; headline for register form

--- a/_sass/register.scss
+++ b/_sass/register.scss
@@ -39,12 +39,19 @@
       border-top: none;
       padding-top: 0;
     }
+
+    &.registerFormTitle {
+      color: #404040;
+      font-weight: 700;
+      font-size: 1.4rem;
+      margin-bottom: 0.8rem;
+    }
   }
 
   .primaryButton {
     font-size: 1.4rem;
     margin-top: 1rem;
-    padding: .5rem 2rem;
+    padding: 0.5rem 2rem;
   }
 }
 
